  ConnectionPool/EntityDb/EntityDbRemote.isConnectionValid() renamed to isValid()
  ConnectionPool.checkOutConnection() and checkInConnection() renamed to getConnection() and returnConnection()
  EntityDbRemoteAdapter refactored
  domain package refactored
  EntityModel.masterSelectionChanged() renamed to initialize()
  EntityTableModel.searchByForeignKeyValues() renamed to setForeignKeySearchValues()
  Refactored ConnectionPool and related classes
  Property.get/SetEntityID() added
  EntityCriteriaUtil, reduced serialization overhead
  ConnectionPoolStatistics.connectionRequestsFailed added
  ClientMonitorPanel, disconnect action added to list popup menu
  LoadTestModel/Panel, average scenario duration added
  Log4j replaced with logback
  Interfaced load test classes
  ItemRandomizer interface added
  RandomItemModel renamed to ItemRandomizerModel
  Remote load testing implemented
  Derby lib removed, with JavaDB and all that
  AbstractFilteredTableModel.isRefreshing() added
  StateObserver, activation listeners can now be added/removed
  EntityDbProvider.getConnectedState() added
  EntityDbRemoteProvider description now includes the server host name
  EntityApplicationPanel now displays a "Disconnected" message in the title
  EntityDbConnection no longer propagates dbms specific exception to the client
  LoginProxy added
  ConnectionPoolImpl new connection threshold is now configurable from pool monitor
  LoadTestModel generified
  Fixed sorting when columns have been moved around
0.6.0
  EntityComboBoxModel.getEntity(primaryKey) added
  EntityEditModel.containsComboBoxModel(Property) removed
  Javadocs and coverage improvements
  AbstractRemoteServer connection limiting added
  RemoteServer.connectionsAvailable() added
  WebStartServer added
  Configuration.SERVER_CONNECTION_LIMIT added
  EmpDeptLoadTest improved
  ConnectionPoolImplTest now uses QueryLoadTestModel
  EntityDbConnection.setForeignKeyValues() simplified
  Server logging improved